Several design modifications

--- a/Content/css/style.css
+++ b/Content/css/style.css
@@ -133,10 +133,6 @@ h2 {
 	color: #d66666;
 }
 
-#content {
-    margin-bottom : 30px;
-}
-
 #blogTitle {
     text-align: center;
 }
@@ -151,17 +147,37 @@ h2 {
 }
 
 
-/** Administration **/
-
-.adminList h2 {
-  color: #000;
-  font-size: 1.2em;
+#blogFooter .btn {
+  margin-right: 5px;
 }
 
 
-.adminList time {
+/** Administration **/
+
+.text-center .row {
+  justify-content: space-around;
+}
+
+.admin-editpost {
+display: block;
+width: 100%;
+margin-top: 8px;
+padding: .375rem .75rem;
+line-height: 1.5;
+color: #495057;
+background-color: #fff;
+background-clip: padding-box;
+border: 1px solid #ced4da;
+border-radius: .25rem;
+transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.admin-editpost h2 {
+  color: #000;
+}
+
+.admin-editpost time {
   color: #555;
-  font-size: 0.8em;
 }
 
 .fixed-top {
