Breadcrumb added and design modified

--- a/Content/css/admin.css
+++ b/Content/css/admin.css
@@ -1,12 +1,12 @@
 /** Admin CSS **/
 
-.main {
-	margin-top: 60px;
-}
-
 time {
 	color: #746d4b;
 	font-size: 1em;
+}
+
+.breadcrumb {
+	margin-top: 60px;
 }
 
 .admin-editpost {
