--- a/Content/css/style.css
+++ b/Content/css/style.css
@@ -119,7 +119,7 @@ body {
 }
 
 .navbar-light .navbar-brand {
-  color: #beac7a;
+  color: #4e7e8c;
 }
 
 .navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover {
@@ -147,7 +147,7 @@ header.masthead .page-heading, header.masthead .site-heading a:hover {
 .breadcrumb {
   padding: 0rem;
   margin-bottom: 1rem;
-  background-color: #beac7a;
+  background-color: #4e7e8c;
   font-size: 0.8rem;
 }
 
@@ -194,7 +194,7 @@ time {
 }
 
 .readmore {
-  color: #beac7a;
+  color: #4e7e8c;
   font-size: 0.8em;
   margin-left: 15px;
 }
@@ -202,10 +202,6 @@ time {
 #blogTitle {
     text-align: center;
     color: #c0bec1;
-}
-
-.comment p {
-  margin-bottom: 5px;
 }
 
 #decoLink {
@@ -222,6 +218,26 @@ time {
   z-index: 10;
   height: 3em;
   margin-top: 20px;
+}
+
+/** Comments **/
+
+.comment {
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem; 
+}
+
+.comment h3 {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  color: #4e7e8c;
+  font-size: 1.5rem;
+}
+
+.comment p {
+  margin-bottom: 5px;
 }
 
 /** Connection **/
